[XRandRBrightness] Don't call for xrandr if it's not available

Check whether the extension is available before calling into it.

REVIEW: 126146
BUG: 352462
FIXED-IN: 5.5.1